Font prefs shouldn't limit choices + some optimizations of the 'user perception' by lazily building the drop down font lists while there, b=142511, r=gerv, sr=blizzard, a=asa